--- a/style.css
+++ b/style.css
@@ -76,21 +76,17 @@ body h5{
 }
 /* time line  */
 
- 
-  
-  /* The actual timeline (the vertical ruler) */
-  #timeline  .timeline {
+/* The actual timeline (the vertical ruler) */
+.main-timeline {
     position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
   }
   
   /* The actual timeline (the vertical ruler) */
-  #timeline .timeline::after {
-    content: '';
+  .main-timeline::after {
+    content: "";
     position: absolute;
     width: 6px;
-    background-color: white;
+    background-color: #939597;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -98,22 +94,21 @@ body h5{
   }
   
   /* Container around content */
-  #timeline .container {
-    padding: 10px 40px;
+  .timeline {
     position: relative;
     background-color: inherit;
     width: 50%;
   }
   
   /* The circles on the timeline */
-  #timeline .container::after {
-    content: '';
+  .timeline::after {
+    content: "";
     position: absolute;
     width: 25px;
     height: 25px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
+    right: -13px;
+    background-color: #939597;
+    border: 5px solid #f5df4d;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -121,21 +116,21 @@ body h5{
   
   /* Place the container to the left */
   .left {
+    padding: 0px 40px 20px 0px;
     left: 0;
   }
   
   /* Place the container to the right */
   .right {
+    padding: 0px 0px 20px 40px;
     left: 50%;
   }
   
   /* Add arrows to the left container (pointing right) */
   .left::before {
     content: " ";
-    height: 0;
     position: absolute;
-    top: 22px;
-    width: 0;
+    top: 18px;
     z-index: 1;
     right: 30px;
     border: medium solid white;
@@ -146,10 +141,8 @@ body h5{
   /* Add arrows to the right container (pointing left) */
   .right::before {
     content: " ";
-    height: 0;
     position: absolute;
-    top: 22px;
-    width: 0;
+    top: 18px;
     z-index: 1;
     left: 30px;
     border: medium solid white;
@@ -159,46 +152,96 @@ body h5{
   
   /* Fix the circle for containers on the right side */
   .right::after {
-    left: -16px;
+    left: -12px;
   }
-  
-  /* The actual content */
-  .content {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
+
+
+  .main-timeline p{
+    font-size: 15px;
   }
-  
+
+/* footer  */
+footer .name{
+    display: inline;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 0px 10px;
+    font-size: 17px;
+    border-right: 1px solid #fff;
+}
+footer .job{
+    display: inline;
+    color: #fff;
+    padding: 0px 10px;
+    border-right: 1px solid #fff;
+    font-size: 18px;
+}
+footer .contact{
+    text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    font-size: 18px;
+    padding: 0px 10px;
+}
+.date{
+    color: #8a8a8a;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   /* Media queries - Responsive timeline on screens less than 600px wide */
   @media screen and (max-width: 600px) {
     /* Place the timelime to the left */
-    .timeline::after {
-    left: 31px;
+    .main-timeline::after {
+      left: 31px;
     }
-    
+  
     /* Full-width containers */
-    .container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    .timeline {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
     }
-    
+  
     /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    .timeline::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
     }
   
     /* Make sure all circles are at the same spot */
-    .left::after, .right::after {
-    left: 15px;
+    .left::after,
+    .right::after {
+      left: 18px;
     }
-    
+  
+    .left::before {
+      right: auto;
+    }
+  
     /* Make all right containers behave like the left ones */
     .right {
-    left: 0%;
+      left: 0%;
     }
   }
